website port first commit, all pages done except sponsor

--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "@firebase/app": "^0.1.10",
+    "@firebase/firestore": "^0.3.4",
     "animate.css": "^3.5.2",
-    "buefy": "^0.6.1",
+    "buefy": "^0.6.3",
+    "bulma-divider": "^1.0.1",
+    "firebase": "^4.10.1",
     "font-awesome": "^4.7.0",
     "mdi": "^2.0.46",
+    "npm": "^5.7.1",
     "vue": "^2.5.2",
+    "vue-firestore": "^0.2.6",
+    "vue-full-calendar": "^2.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
