--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,11 @@
-.DS_Store
-node_modules/
-dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-test/unit/coverage
-test/e2e/reports
-selenium-debug.log
+# dependencies
+node_modules
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+# logs
+npm-debug.log
 
-credentials.json
-#until json bug fixed
-firebase.js
+# Nuxt build
+.nuxt
+
+# Nuxt generate
+dist
