--- a/package.json
+++ b/package.json
@@ -10,16 +10,26 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
   },
   "dependencies": {
-    "nuxt": "^1.0.0"
+    "@nuxtjs/axios": "^5.3.1",
+    "bulma": "^0.7.1",
+    "firebase": "^5.3.0",
+    "nuxt": "^1.0.0",
+    "nuxt-buefy": "^0.1.0",
+    "vue-full-calendar": "^2.6.1",
+    "vuefire": "^2.0.0-alpha.12"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "node-sass": "^4.9.2",
+    "push-dir": "^0.4.1",
+    "sass-loader": "^7.0.3"
   }
 }
