--- a/package.json
+++ b/package.json
@@ -14,23 +14,24 @@
     "deploy": "push-dir --dir=dist --remote=upstream --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "@nuxtjs/auth": "^4.5.1",
-    "bulma": "^0.7.1",
-    "firebase": "^5.3.0",
-    "nuxt": "^1.0.0",
-    "nuxt-buefy": "^0.1.0",
-    "vue-full-calendar": "^2.6.1",
-    "vuefire": "^2.0.0-alpha.12",
-    "@nuxtjs/axios": "^5.3.1"
+    "@nuxtjs/auth": "^4.5.3",
+    "@nuxtjs/axios": "^5.3.6",
+    "bulma": "^0.7.2",
+    "firebase": "^5.5.9",
+    "http-server": "^0.11.1",
+    "nuxt": "^1.4.4",
+    "nuxt-buefy": "^0.1.2",
+    "vue-full-calendar": "^2.7.0",
+    "vuefire": "^2.0.0-alpha.16"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "node-sass": "^4.9.2",
+    "eslint-plugin-vue": "^4.7.1",
+    "node-sass": "^4.10.0",
     "push-dir": "^0.4.1",
-    "sass-loader": "^7.0.3"
+    "sass-loader": "^7.1.0"
   }
 }
