--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.3.6",
-    "bulma": "^0.7.2",
-    "firebase": "^5.5.9",
+    "ajv": "^6.10.0",
+    "bulma": "^0.7.4",
+    "firebase": "^5.11.1",
     "http-server": "^0.11.1",
-    "nuxt": "^1.4.4",
+    "nuxt": "^1.4.5",
     "nuxt-buefy": "^0.1.2",
     "vue-full-calendar": "^2.7.0",
     "vuefire": "^2.0.0-alpha.16"
@@ -30,7 +31,7 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.7.1",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
     "push-dir": "^0.4.1",
     "sass-loader": "^7.1.0"
   }
